--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "del": "^3.0.0",
     "eslint": "3.15.0",
     "eslint-config-keystone": "3.0.0",
     "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.11"
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-run": "^1.7.1",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
+    "run-sequence": "^2.1.0"
   },
   "scripts": {
     "lint": "eslint .",
