--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "async": "2.1.4",
+    "dotenv": "4.0.0",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
-    "pug": "2.0.0-beta11",
-    "dotenv": "4.0.0",
-    "async": "2.1.4"
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
@@ -15,8 +15,11 @@
     "eslint-config-keystone": "3.0.0",
     "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.3.0",
+    "gulp-less": "^3.3.2",
+    "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.2.1",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
