--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "4.0.0",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
+    "nodemailer": "^4.0.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
