--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "async": "2.1.4",
     "dotenv": "4.0.0",
     "keystone": "4.0.0-beta.5",
+    "keystone-email": "^1.0.5",
     "lodash": "^4.13.1",
-    "nodemailer": "^4.0.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
