--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "keystone": "4.0.0-beta.5",
     "keystone-email": "^1.0.5",
     "lodash": "^4.13.1",
+    "moment": "^2.18.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
