--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "normalize-css": "normalize.css#^7.0.0",
-    "velocity": "^1.5.0"
+    "velocity": "^1.5.0",
+    "objectFitPolyfill": "^2.0.5"
   }
 }
