--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "normalize-css": "normalize.css#^7.0.0",
     "velocity": "^1.5.0",
-    "objectFitPolyfill": "^2.0.5"
+    "objectFitPolyfill": "^2.0.5",
+    "isMobile": "^0.4.1"
   }
 }
