--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "2.1.4",
     "dotenv": "4.0.0",
+    "glob": "^7.1.2",
     "keystone": "4.0.0-beta.5",
     "keystone-email": "^1.0.5",
     "lodash": "^4.13.1",
