--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dotenv": "4.0.0",
     "glob": "^7.1.2",
     "keystone": "4.0.0-beta.5",
-    "keystone-email": "^1.0.5",
     "lodash": "^4.13.1",
     "moment": "^2.18.1",
-    "pug": "2.0.0-beta11"
+    "nodemailer": "^4.1.0",
+    "pug": "2.0.0-beta11",
+    "request": "^2.81.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
