--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "normalize-css": "normalize.css#^7.0.0",
     "velocity": "^1.5.0",
     "objectFitPolyfill": "^2.0.5",
-    "isMobile": "^0.4.1"
+    "isMobile": "^0.4.1",
+    "packery": "^2.1.1"
   }
 }
