--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "async": "2.1.4",
+    "connect-mongo": "^1.3.2",
     "dotenv": "4.0.0",
     "glob": "^7.1.2",
     "keystone": "4.0.0-beta.5",
