--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "4.0.0",
     "glob": "^7.1.2",
     "keystone": "4.0.0-beta.5",
+    "keystone-express-sitemap": "^1.2.0",
     "lodash": "^4.13.1",
     "moment": "^2.18.1",
     "nodemailer": "^4.1.0",
